<resources>

    <!--用户详情-->

    <string name="live__u_hao_1">ID</string>
    <string name="live__care">关注</string>
    <string name="live__fans">粉丝</string>
    <string name="live__care_2">关注</string>
    <string name="live__add_cancle_care">关注</string>
    <string name="live__fans_1">粉丝</string>
    <string name="live__fans_2">粉丝</string>
    <string name="live_send_gift">收礼</string>
    <string name="live_receiver_gift">送出</string>
    <string name="live_receiver_gift_2">送礼</string>
    <string name="live_private_letter">聊天</string>
    <string name="live_id_clip">ID号已复制到剪切板</string>
    <string name="live_add_care">关注</string>
    <string name="live_user_no_intro">TA好像忘记签名了~</string>
    <string name="live_owner_no_intro">你好像忘记签名了~</string>
    <string name="live_cancle_care">已关注</string>
    <!--礼物-->
    <string name="live_biggift_send">赠送给主播一个</string>
    <string name="live_biggift_hj">火箭</string>
    <string name="live_biggift_sjyt">世纪游艇</string>
    <string name="live_biggift_yjcx">一箭穿心</string>
    <string name="live_biggift_xxsc">心想事成</string>
    <string name="live_biggift_lbjj">兰博基尼</string>
    <string name="live_biggift_xfmtl">幸福摩天轮</string>
    <string name="live_sun_rank">阳光排名</string>
    <string name="live_send">发送</string>
    <string name="live_say_something">和大家说点什么</string>
    <string name="live_enter">进入了房间</string>
    <string name="live_ji">级</string>

    <!--无网络提示框-->


    <string name="live_to_set">去设置</string>
    <string name="live_ok">好</string>
    <string name="live_prompt">提示</string>
    <string name="live_continue_play">继续</string>
    <string name="live_net_connect_error">网络连接异常,请检查网络设置</string>
    <string name="live_no_wifi">当前网络无WiFi,可能会被运营商收取流量费用</string>
    <string name="live_no_network">联网失败,请检查手机网络状态</string>
    <!--重连提示框-->
    <string name="live_reconnect_wait">正在重连中,请稍后~</string>

    <string name="live_send_one_gift">赠送</string>
    <string name="live_gift">礼物</string>
    <string name="live_count_down">连击</string>
    <string name="live_letter_recharge">充值：</string>
    <string name="live_u_hao">ID:</string>
    <string name="live_exit">确认退出直播间吗?</string>
    <string name="live_ensure">确定</string>
    <string name="live_cancel">取消</string>
    <string name="live_hao">好</string>

    <string name="live_beauty_close">美颜关闭</string>
    <string name="live_beauty_open">美颜打开</string>
    <string name="live_anchor_live_exit">有%1$s人观看直播,确定关闭吗？</string>

    <!--消息列表-->
    <string name="live_hongbao_con">恭喜发财，大吉大利！</string>
    <string name="live_anchor_redbag">主播红包</string>
    <string name="live_send_lucky">发出了红包</string>
    <string name="live_group_hongbao">群红包</string>
    <string name="live_give_anchor">赠送1个</string>
    <string name="live_anchor_kick_room">被踢出了直播间</string>
    <string name="live_admin_kick_room">被场控踢出了直播间</string>
    <string name="live_anchor_not_speak">已被禁言</string>
    <string name="live_admin_not_speak">被禁言了</string>
    <string name="live_liked_anchor">点亮了一个赞</string>
    <string name="live_set_manager">被设为场控</string>
    <string name="live_cancel_admin">被取消场控</string>
    <string name="live_sha_suc">分享了主播,亲朋好友都来了</string>
    <string name="live_welcome">入场了</string>
    <string name="live_levae_room">离场了</string>
    <string name="live_add_follow">关注了主播</string>
    <string name="live_congri_user_lv">恭喜%1$s等级升级至%2$s级</string>
    <string name="live_congri_anchor_lv">恭喜%1$s主播等级升级至%2$s级</string>
    <string name="live_sys_info">系统消息:</string>
    <string name="live_sys_notice">系统公告:&#160;&#160;</string>
    <string name="live_sys_msg">系统消息:&#160;&#160;</string>
    <string name="live_input_chat_content">输入聊天内容</string>
    <string name="live_10_bi_content">10银币/条</string>
    <string name="live_again_connected">未连接聊天室,请稍后重试!</string>
    <string name="live_zeng_song_one_gitf">赠送</string>
    <string name="live_num">个</string>

    <!--私信列表-->
    <string name="live_msg_commu">通讯录</string>
    <string name="live_letter_list_ignore">忽略未读</string>
    <string name="live_my_let">我的私信</string>
    <string name="live_msg">消息</string>
    <string name="live_system_msg">系统消息</string>
    <string name="live_readed">全部标为已读</string>
    <string name="live_delete_msg_tip">确认删除消息？</string>
    <string name="live_delete_success">删除成功</string>
    <!--私信列表-->
    <string name="live_add_fri_tips">TA还不是你的好友,互相加关注可以加为好友噢</string>
    <string name="live_say_someting">说点什么</string>
    <string name="live_letter_not_empty">请输入私信内容</string>
    <string name="live_follow_succeed">关注成功</string>
    <string name="live_letter_give_gift">赠送礼物</string>

    <string name="live_live_finish">当前直播已中断,请检查后重试</string>
    <string name="live_anchor_live_error">主播直播异常，请更换直播</string>
    <string name="live_sure_exit_live">确认退出观看直播？</string>
    <string name="live_sure_exit_men_piao_live">同一场直播退出后再次进入无需扣费</string>
    <string name="live_leave_room">离开房间</string>
    <string name="live_gift_not_select">请选择礼物后再赠送！</string>
    <!--礼物充值-->
    <string name="live_balance">余额：</string>
    <string name="live_recharge">充值</string>
    <string name="live_give_gift">赠送</string>
    <string name="live_go_excharge">去充值</string>
    <string name="live_letter_bal_not_enough">余额不足</string>
    <string name="live_balance_not_enough">您的%1$s不足，充值后才可继续送礼，是否去充值？</string>

    <string name="live_countiune_look">继续观看</string>
    <string name="live_balance_not_enough_1">您的%1$s不足,请充值</string>
    <string name="live_immediately_immediatel">立即充值</string>
    <string name="live_pay">支付</string>
    <string name="live_pay_now">立即购买</string>
    <string name="live_pay_vip">购买VIP</string>

    <!--礼物-->
    <string name="live_baobaoxiong">抱抱熊</string>
    <string name="live_yicx">一箭穿心</string>
    <string name="live_lbjl">兰博基尼</string>
    <string name="live_sjyt">世纪游艇</string>
    <string name="live_mfb">魔法棒</string>
    <string name="live_mmd">么么哒</string>
    <string name="live_sjx">水晶鞋</string>
    <string name="live_dmg">大玫瑰</string>

    <!--用户账号被禁-->
    <string name="live_user_account_forbidden">你已被禁播，直播结束</string>
    <string name="live_hint">提示</string>
    <string name="live_i_knoe">我知道了</string>

    <!--主播直播结束-->
    <string name="live_end_on_live">直播已结束!</string>
    <string name="live_end_on_live1">直播已结束</string>
    <string name="live_follow_anchor">关注主播</string>
    <string name="live_end_chengjiu">本场直播成就</string>
    <string name="live_go_home">返回首页</string>
    <string name="live_search_on_follow">已关注</string>
    <string name="live_room_num">房间号：</string>
    <string name="live_firebird_rank">快点视频排名  </string>
    <string name="platform_list">快点视频排行榜</string>
    <string name="close_list">主播亲密榜</string>
    <string name="zhou_bang_as">距周榜截止:</string>
    <string name="live_now_no_rank">暂无排名</string>
    <string name="live_id">ID:</string>
    <string name="live_report">举报</string>
    <string name="live_admin">管理</string>
    <string name="live_vip">VIP类直播</string>
    <string name="live_open_vip_can_live">开通会员可继续观看</string>
    <string name="live_free_look_over">免费试看结束</string>
    <string name="live_continiue_look_deduct_minute">继续观看将每分钟扣取</string>
    <string name="live_sliver_is_continiu">,是否继续？</string>
    <string name="timing_charge">计时付费类直播</string>
    <string name="live_buy_tickets">门票类直播</string>
    <string name="live_buy_tickets_only">继续观看将花费%1$s购买门票,是否购买?</string>
    <string name="live_report_success">举报成功</string>
    <string name="live_set_admin">设为管理员</string>
    <string name="live_set_admin_success">设为管理员成功</string>
    <string name="operate_success">操作成功</string>

    <string name="live_cancle_admin">取消管理员</string>
    <string name="live_cancle_admin_success">取消管理员成功</string>
    <string name="live_shut_up">禁言</string>
    <string name="live_shut_up_success">禁言成功</string>
    <string name="live_kicking_people">踢人</string>
    <string name="live_kicking_people_succrss">已被踢出直播间</string>
    <string name="live_logout_room">退出房间</string>
    <string name="live_follow_success">关注成功</string>
    <string name="live_cancle_follow_success">取消关注成功</string>
    <string name="live_hot_anchor_rank_no">主播排名第</string>
    <string name="live_ranking">名</string>
    <string name="live_down_gift_res">正在下载礼物资源</string>
    <string name="live_vip_out_is_gobuy">你的VIP已到期，是否去购买?</string>
    <string name="live_you_killed_live">你已被禁播直播结束,如有问题请联系客服</string>
    <string name="live_net_busy_change_wifi_live">网络环境不佳，请更换网络保证正常直播</string>
    <string name="live_net_busy_change_wifi_look">您当前网络的网络环境不佳,请尽快更换网络保证正常观看</string>
    <string name="live_audience_network_bed">您当前网络不好哟~</string>
    <string name="live_anchor_network_bed">主播网络暂时有点问题哈~</string>


    <string name="look_liveing">观看直播</string>
    <string name="look_liveing_now_live">您正在直播,确定关闭直播去看Ta的直播吗?</string>
    <string name="look_liveing_now_look_live">您正在观看直播,确定退出当前直播间去看Ta的直播吗?</string>
    <string name="live_kick_room">您已被主播/管理员踢出房间</string>
    <string name="set_or_cancle_admin">您已被主播%1$s管理员</string>
</resources>
