<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/mTvKicking"
        style="@style/comm_text"
        android:layout_width="match_parent"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:padding="@dimen/design_margin"
        android:text="@string/live_kicking_people"
        android:textColor="@color/comm_text_color_black_s" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/pageBg_color" />
    <TextView
        android:id="@+id/mTvShutup"
        style="@style/comm_text"
        android:layout_width="match_parent"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:padding="@dimen/design_margin"
        android:text="@string/live_shut_up"
        android:textColor="@color/comm_text_color_black_s" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="?attr/pageBg_color" />
    <TextView
        android:id="@+id/mTvAdmin"
        style="@style/comm_text"
        android:layout_width="match_parent"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:padding="@dimen/design_margin"
        android:text="@string/live_set_admin"
        android:textColor="@color/comm_text_color_black_s" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="?attr/pageBg_color" />

    <TextView
        android:id="@+id/mTvBack"
        style="@style/comm_text"
        android:layout_width="match_parent"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:padding="@dimen/design_margin"
        android:text="@string/live_cancel"
        android:textColor="@color/comm_text_color_black_s" />
</LinearLayout>