<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:background="?attr/shap_white_radius_4">

    <TextView
        android:id="@+id/px_dialog_title"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:maxLength="10"
        android:singleLine="true"
        android:text="@string/live_prompt"
        android:textColor="@color/first_text_525252"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/px_dialog_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/px_dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/live_anchor_live_error"
        android:textColor="@color/black_tran"
        android:textSize="14sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/px_dialog_description"
        android:background="?attr/pageBg_color"/>


    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/divider"
        android:background="@null"
        android:text="@string/live_ok"
        android:textColor="@color/black_tran"
        android:textSize="16sp"
        android:visibility="visible"/>


</RelativeLayout>