<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="?attr/shap_white_radius_4">







    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:id="@+id/mTvHead"
        android:paddingLeft="@dimen/design_margin"
        android:layout_marginTop="@dimen/design_margin"
        android:textColor="?attr/text_color_333"
        android:paddingTop="@dimen/design_margin_s"
        android:text="@string/live_letter_bal_not_enough"
        android:paddingBottom="@dimen/design_margin_s"
        android:textStyle="bold"
        android:textSize="@dimen/comm_text_size_h" />
    <TextView
        android:id="@+id/px_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mTvHead"
        android:layout_marginRight="@dimen/design_margin"
        android:paddingTop="@dimen/design_margin"
        android:text="@string/live_balance_not_enough_1"
        android:paddingBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/design_margin"
        android:textColor="@color/comm_text_color_black_s"
        android:textSize="@dimen/comm_text_size" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/px_dialog_description"
        android:layout_marginBottom="@dimen/dp_12"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_set"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/live_cancel"
            android:paddingLeft="@dimen/design_margin"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingRight="@dimen/design_margin"
            android:textColor="@color/comm_text_color_black_s"
            android:textSize="@dimen/comm_text_size_h" />


        <TextView
            android:id="@+id/bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/design_margin_s"
            android:gravity="center"
            android:paddingRight="@dimen/design_margin"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/design_margin"
            android:text="@string/live_immediately_immediatel"
            android:textColor="@color/comm_text_color_main"
            android:textSize="@dimen/comm_text_size_h" />
    </LinearLayout>

</RelativeLayout>