<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="?attr/shap_white_radius_4">

        <TextView
            android:id="@+id/px_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/design_margin"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/design_margin_s"
            android:paddingLeft="@dimen/design_margin"
            android:paddingTop="@dimen/design_margin_s"
            android:textStyle="bold"
            android:text="@string/live_prompt"

            android:textColor="?attr/text_color_333"
            android:textSize="@dimen/comm_text_size_h" />

        <TextView
            android:id="@+id/px_dialog_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/px_dialog_title"
            android:layout_marginLeft="@dimen/design_margin"
            android:layout_marginRight="@dimen/design_margin"
            android:paddingBottom="@dimen/dp_20"
            android:paddingTop="@dimen/design_margin"
            android:text="@string/live_net_busy_change_wifi_live"
            android:textColor="@color/comm_text_color_black_s"
            android:textSize="@dimen/comm_text_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/px_dialog_description"
            android:layout_marginBottom="@dimen/dp_12"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt_set"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/design_margin"
                android:paddingRight="@dimen/design_margin"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:text="@string/live_to_set"
                android:textColor="@color/comm_text_color_black_s"
                android:textSize="@dimen/comm_text_size_h" />


            <TextView
                android:id="@+id/bt_ok"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/design_margin_s"
                android:paddingBottom="@dimen/dp_10"
                android:paddingTop="@dimen/dp_10"
                android:gravity="center"
                android:paddingLeft="@dimen/design_margin"
                android:paddingRight="@dimen/design_margin"
                android:text="@string/live_ok"
                android:textColor="@color/comm_text_color_main"
                android:textSize="@dimen/comm_text_size_h" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>